landing page changes, background color, fixed spacing on components, changed images bg color & more

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -91,7 +91,7 @@ body {
 
 body {
     color: rgb(255,255,255);
-  background: rgb(20, 20, 20)
+  background: rgb(0, 0, 0)
 
 }
 
